# news-agent

./: .env.example  .gitignore  CHANGELOG.md  PIPELINE_OVERVIEW.md  README.md  UV_SETUP.md  YEAR_END_CONFIG_GUIDE.md  banner_prompt_generator.py  config.fertility.json  config.json  config_year_end.json  ingestor-config.example.yaml  linkedin_extractor.py  llm_caller.py  newsletter_composer.py  pipeline.py  pipeline_fertility.py  podcast_generator.py  pyproject.toml  requirements.txt  rss_parser.py  selection_policy.py  summarizer.py  xml to csv.ipynb
ingestor/: bridge.py  cli.py  config.py  dedupe.py  fetch.py  history.py  models.py  normalize.py  parse.py
tests/: conftest.py  test_dedupe.py  test_history.py  test_newsletter_composer.py  test_normalize.py  test_parse.py  test_selection_policy.py  test_summarizer.py
