[project]
name = "news-agent"
version = "0.1.0"
description = "A comprehensive automation system that transforms RSS feeds into professional content ready for distribution"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "feedparser>=6.0.11",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# For script-based projects: include all Python scripts at root level
# This allows uv sync to work without --no-install-project flag
only-include = [
    "pipeline.py",
    "rss_parser.py",
    "query_articles.py",
    "podcast_generator.py",
    "linkedin_extractor.py",
    "banner_prompt_generator.py",
]

[tool.uv]
# Configuration for uv package manager






